new change in html file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
     </div>
     <button class="add-item">Add Item</button>
-    <button class="clear-all">Clear All</button>
+    <button class="clear-all">Clear EveryThing</button>
     <ul class="expense-list">
 
     </ul>
